# ftd2xx

./: .gitignore  LICENSE  PKG-INFO  README.rst  myversion.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  codeql-analysis.yml  docs.yml  python-package.yml  python-publish.yml  ruff.yml
docs/: conf.py  index.rst
ftd2xx/: __init__.py  _ftd2xx.py  _ftd2xx_darwin.py  _ftd2xx_linux.py  aio.py  api_classic.py  api_eeprom.py  api_ext.py  api_win32.py  defines.py  ftd2xx.py  structs.py  typedefs.py
ftd2xx/aio/: __init__.py  aio.py  transports.py
ftd2xx/tests/: t_aio.py  t_ftd2xx.py
