[tool.ruff]
target-version = "py38"

[tool.black]
target-version = ["py38"]
extend-exclude = '''
/(
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "skip"
allow_redefinition = false
ignore_errors = false
implicit_reexport = true
local_partial_types = true
strict_optional = false
strict_equality = true
no_implicit_optional = true
warn_unreachable = true
warn_no_return = true
exclude = ["typings", "ftd2xx/_ftd2xx_*.py"]
