[project]
dynamic = ["version", "readme", "authors", "dependencies"]
name = "ftd2xx"
description = "Python interface to ftd2xx.dll from FTDI using ctypes based on d2xx by Pablo Bleyer"
license = { file = "LICENSE" }
keywords = ["ftd2xx", "d2xx", "ftdi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[tool.ruff]
target-version = "py38"

[tool.black]
target-version = ["py38"]
extend-exclude = '''
/(
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true


[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "skip"
allow_redefinition = false
ignore_errors = false
implicit_reexport = true
local_partial_types = true
strict_optional = false
strict_equality = true
no_implicit_optional = true
warn_unreachable = true
warn_no_return = true
exclude = ["typings", "ftd2xx/_ftd2xx_*.py"]
