[project]
dynamic = ["version", "authors"]
name = "ftd2xx"
description = "Python interface to ftd2xx.dll from FTDI using ctypes based on d2xx by Pablo Bleyer"
license = { file = "LICENSE" }
keywords = ["ftd2xx", "d2xx", "ftdi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ['pywin32; platform_system == "Windows"']
readme = "README.rst"

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Documentation = "https://ftd2xx.github.io/ftd2xx/"
GitHub = "https://github.com/ftd2xx/ftd2xx"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ftd2xx/_version.py"

[tool.ruff]
target-version = "py38"

[tool.black]
target-version = ["py38"]
extend-exclude = '''
/(
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[tool.setuptools-git-versioning]
enabled = true


[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "skip"
allow_redefinition = false
ignore_errors = false
implicit_reexport = true
local_partial_types = true
strict_optional = false
strict_equality = true
no_implicit_optional = true
warn_unreachable = true
warn_no_return = true
exclude = ["typings", "ftd2xx/_ftd2xx_*.py"]

[tool.hatch.envs.test]
dependencies = ["pytest"]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.pytest.ini_options]
python_files = ["*/tests/t_*.py"]
python_classes = "Test*"
testpaths = ["ftd2xx/tests"]


[tool.hatch.envs.docs]
dependencies = ["sphinx", "furo", "sphinx-autoapi"]

[tool.hatch.envs.docs.scripts]
build = "make -C docs html"
