[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[build_py]
optimize = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
python_version = 3.8
check_untyped_defs = True
# We don't have stubs for all libraries
ignore_missing_imports = True
# We need some ignores for Pylance
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
follow_imports = skip
allow_redefinition = False
ignore_errors = False
implicit_reexport = True
local_partial_types = True
strict_optional = False
strict_equality = True
no_implicit_optional = True
warn_unreachable = True
warn_no_return = True
exclude = (?x)(
    typings
    | ^ftd2xx/_ftd2xx_.*\.py$    # files named "one.py"
  )
